--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@ que nota
 este debe quedar de raul
 este debe quedar de sebas
 este si debe quedar tambien de sebas
-
+aprendiendo como crear una rama
+buena explicacion
